bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (i=0){
        ^